# dbt-analysis

./: .env  .gitignore  Makefile  dbt_project.yml  env-development.sample  pyproject.toml
models/marts/core/: dim_dates.sql
models/marts/sql_analysis/ch03/: simple_trend.sql
models/staging/jaffle_shop/: stg_customers.sql
notebooks/ch03_time_series/: simple_query.ipynb
