[tool.poetry]
name = "dbt-fundamentals"
version = "0.1.0"
description = ""
authors = ["antiny <tranminhan.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
dbt-snowflake = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
