[tool.poetry]
name = "dbt-fundamentals"
version = "0.1.0"
description = ""
authors = ["antiny <tranminhan.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
dbt-snowflake = "^1.0.0"
jupyterlab = "^3.2.8"
seaborn = "^0.11.2"
snowflake-connector-python = {extras = ["pandas"], version = "^2.7.2"}
snowflake-sqlalchemy = "^1.3.3"
python-dotenv = "^0.19.2"
jupytext = "^1.13.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
